--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-community": "^25.2.1",
     "ag-grid-react": "^25.2.0",
     "graphql": "^15.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
