--- a/package.json
+++ b/package.json
@@ -4,20 +4,28 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.3.0",
+    "@fullcalendar/core": "^5.7.0",
+    "@fullcalendar/daygrid": "^5.7.0",
+    "@fullcalendar/react": "^5.7.0",
+    "@fullcalendar/timegrid": "^5.7.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "ag-grid-community": "^25.2.1",
     "ag-grid-react": "^25.2.0",
+    "fullcalendar": "^5.7.0",
     "graphql": "^15.5.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.33.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tui-calendar": "^1.13.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
